--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Google Drive/School/Winter 2019/2XB3/algs4.jar"/>
+	<classpathentry kind="lib" path="lib/algs4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
